Issue #2738645 by toncic, yongt9412, Insasse, miro_dietiker, Berdir: Add a collapse / edit all button

--- a/css/paragraphs.widget.css
+++ b/css/paragraphs.widget.css
@@ -142,3 +142,8 @@
 .is-horizontal .paragraphs-tabs .tabs__tab {
   border-bottom: 0;
 }
+
+.paragraphs-header-actions {
+  float: right;
+  margin-right: -10px;
+}
